# ValeriaML_learn_02_06

./: pyproject.toml
ml/: lesson1.ipynb  pandas_full.ipynb  sklearn_full.ipynb  titanic.xlsx
ml/data/: titanic.xlsx
practice/0/: dataset.csv  lab.ipynb
python/lesson1/: dict.ipynb  digits.ipynb  list.ipynb  set.ipynb  str.ipynb  tuple.ipynb  val.ipynb
python/lesson2/: for.ipynb  func.ipynb  if-elif-else.ipynb  while.ipynb
python/lesson3/: area.ipynb  area_n1.py  area_n2.py  areas_0.py  include_func.ipynb  recursive.ipynb  types_of_calling_func.ipynb
